# mocca

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  _clang-format
cmake/modules/: CreateSourceGroups.cmake  GTest.cmake  Macros.cmake  PlatformSpecific.cmake
ext/AES/: CMakeLists.txt
ext/base64/: CMakeLists.txt
ext/jsoncpp/: CMakeLists.txt
ext/lz4/: CMakeLists.txt
ext/sha1/: CMakeLists.txt
mocca/: CMakeLists.txt
mocca/include/mocca/base/: BidirectionalMap.h  BinaryUtil.h  ByteArray.h  CommandLineParser.h  Compression.h  ContainerTools.h  Containers.h  Encryption.h  Endian.h  Error.h  Explicit.h  Memory.h  MessageQueue.h  Mixin.h  Nullable.h  ObjectPool.h  Singleton.h  StringTools.h  Thread.h  Traits.h
mocca/include/mocca/fs/: File.h  Filesystem.h  Path.h
mocca/include/mocca/log/: CallbackLog.h  ConsoleLog.h  HTMLLog.h  Log  Log.h  LogManager.h  LogManager.inl  StreamLog.h  TextLog.h
mocca/include/mocca/net/: AutoConnection.h  ConnectionAggregator.h  ConnectionFactorySelector.h  ConnectionID.h  DataBuffer.h  Endpoint.h  Error.h  IMessageConnection.h  IMessageConnectionAcceptor.h  IMessageConnectionFactory.h  IPhysicalConnection.h  IPhysicalConnectionAcceptor.h  IPhysicalNetworkService.h  IProtocolConnection.h  IProtocolConnectionAcceptor.h  IProtocolNetworkService.h  IStreamConnection.h  IStreamConnectionAcceptor.h  IStreamConnectionFactory.h  LoopbackConnection.h  LoopbackConnectionAcceptor.h  LoopbackNetworkService.h  Message.h  MoccaConnection.h  MoccaConnectionAcceptor.h  MoccaNetworkService.h  NetworkError.h  NetworkServiceLocator.h  PhysicalConnection.h  QueueingConnection.h  TCPConnection.h  TCPConnectionAcceptor.h  TCPNetworkAddress.h  TCPNetworkService.h  WSConnection.h  WSConnectionAcceptor.h  WSHandshake.h  WSMessage.h  WSNetworkService.h  WebsocketDataMessage.h  (+2 more)
mocca/include/mocca/net/framing/: FramingProtocolBase.h  FramingStrategy.h  FramingUtils.h  SizePrefixedProtocol.h  WebSocketProtocol.h
mocca/include/mocca/net/message/: FramingConnection.h  FramingConnectionAcceptor.h  FramingConnectionFactory.h  FramingObjectFactory.h  IMessageConnectionAcceptor.h  LoopbackConnection.h  LoopbackConnectionAcceptor.h  LoopbackConnectionFactory.h  LoopbackConnectionSpawner.h  LoopbackNetworkService.h  NewLoopbackConnection.h  NewLoopbackConnectionAcceptor.h  NewLoopbackConnectionFactory.h  NewLoopbackConnectionSpawner.h  StreamFramingConnection.h  StreamFramingConnectionAcceptor.h
mocca/include/mocca/net/rpc/: Dispatcher.h  JsonKeys.h  Method.h  MethodDescription.h  RpcClient.h  ValueType.h
mocca/include/mocca/net/stream/: IOStreamBase.h  MessageQueueObjectFactory.h  MessageQueueStream.h  MessageQueueStreamAcceptor.h  QueueConnection.h  QueueConnectionAcceptor.h  QueueConnectionFactory.h  QueueConnectionSpawner.h  Sockets.h  Stream.h  StreamAcceptor.h  StreamAcceptorBase.h  StreamBase.h  StreamObjectFactory.h  TCPConnection.h  TCPConnectionAcceptor.h  TCPConnectionFactory.h  TCPNetworkAddress.h  TCPNetworkService.h  TCPObjectFactory.h  TCPStream.h  TCPStreamAcceptor.h  stddefines.h
mocca/include/mocca/testing/: LoopbackPhysicalConnection.h  LoopbackPhysicalConnectionAcceptor.h  LoopbackPhysicalNetworkService.h  NetworkTesting.h
mocca/src/base/: ByteArray.cpp  CommandLineParser.cpp  Compression.cpp  Encryption.cpp  StringTools.cpp  Thread.cpp
mocca/src/fs/: File.cpp  Filesystem.cpp  Path.cpp
mocca/src/log/: ConsoleLog.cpp  HTMLLog.cpp  Log.cpp  LogManager.cpp  StreamLog.cpp  TextLog.cpp
mocca/src/net/: AutoConnection.cpp  ConnectionAggregator.cpp  ConnectionFactorySelector.cpp  Endpoint.cpp  IncomingPacket.cpp  LoopbackConnection.cpp  LoopbackConnectionAcceptor.cpp  LoopbackNetworkService.cpp  Message.cpp  MoccaConnection.cpp  MoccaConnectionAcceptor.cpp  MoccaNetworkService.cpp  NetworkServiceLocator.cpp  PhysicalConnection.cpp  QueueingConnection.cpp  TCPConnection.cpp  TCPConnectionAcceptor.cpp  TCPNetworkAddress.cpp  TCPNetworkService.cpp  WSConnection.cpp  WSConnectionAcceptor.cpp  WSHandshake.cpp  WSNetworkService.cpp  WebsocketHandshakeMessage.cpp  WebsocketMessage.cpp  WebsocketProtocol.cpp
mocca/src/net/framing/: FramingUtils.cpp  SizePrefixedProtocol.cpp  WebSocketProtocol.cpp
mocca/src/net/message/: FramingConnection.cpp  FramingConnectionAcceptor.cpp  FramingConnectionFactory.cpp  FramingObjectFactory.cpp  LoopbackConnection.cpp  LoopbackConnectionAcceptor.cpp  LoopbackConnectionFactory.cpp  LoopbackConnectionSpawner.cpp  NewLoopbackConnection.cpp  NewLoopbackConnectionAcceptor.cpp  NewLoopbackConnectionFactory.cpp  NewLoopbackConnectionSpawner.cpp  StreamFramingConnection.cpp  StreamFramingConnectionAcceptor.cpp
mocca/src/net/rpc/: Dispatcher.cpp  JsonKeys.cpp  Method.cpp  MethodDescription.cpp  RpcClient.cpp  ValueType.cpp
mocca/src/net/stream/: IStreamConnection.cpp  MessageQueueObjectFactory.cpp  MessageQueueStream.cpp  MessageQueueStreamAcceptor.cpp  QueueConnection.cpp  QueueConnectionAcceptor.cpp  QueueConnectionFactory.cpp  QueueConnectionSpawner.cpp  Sockets.cpp  TCPConnection.cpp  TCPConnectionAcceptor.cpp  TCPConnectionFactory.cpp  TCPNetworkAddress.cpp  TCPNetworkService.cpp  TCPObjectFactory.cpp  TCPStream.cpp  TCPStreamAcceptor.cpp
mocca/src/testing/: LoopbackPhysicalConnection.cpp  LoopbackPhysicalConnectionAcceptor.cpp  LoopbackPhysicalNetworkService.cpp  NetworkTesting.cpp
src/: CMakeLists.txt
src/base/: ByteArray.cpp
src/base64/: base64.cpp
src/log/: CallbackLog.cpp  LogManager.cpp
src/net/: DataBuffer.cpp  (+25 more)
tests/: CMakeLists.txt
tests/base/: BidirectionalMapTest.cpp  BinaryUtilTest.cpp  ByteArrayTest.cpp  CommandLineParserTest.cpp  CompressionTest.cpp  ContainerToolsTest.cpp  ContainersTest.cpp  EncryptionTest.cpp  EndianTest.cpp  ExplicitTest.cpp  MessageQueueTest.cpp  NullableTest.cpp  ObjectPoolTest.cpp  StringToolsTest.cpp  ThreadTest.cpp
tests/fs/: PathTest.cpp
tests/net/: ConnectionAggregatorTest.cpp  EndpointTest.cpp  FramingUtilsTest.cpp  MessageConnectionTest.cpp  NetworkServiceTest.cpp  PhysicalConnectionTest.cpp  StreamConnectionTest.cpp  TCPNetworkAddressTest.cpp  WebsocketTest.cpp
(+52 files in other folders)
