CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
PROJECT(mocca_superproject)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules)
SET(CMAKE_PLATFORM_PATH ${PROJECT_SOURCE_DIR}/cmake/platform)

INCLUDE(PlatformSpecific)
INCLUDE(Macros)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/mocca/include)

ADD_SUBDIRECTORY(mocca)

OPTION(MOCCA_BUILD_TESTS "Build tests for mocca" ON)
IF (MOCCA_BUILD_TESTS)
    ADD_SUBDIRECTORY(tests)
ENDIF()