CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(mocca LANGUAGES CXX)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

ADD_SUBDIRECTORY(ext/AES)
ADD_SUBDIRECTORY(ext/base64)
ADD_SUBDIRECTORY(ext/sha1)
ADD_SUBDIRECTORY(ext/jsoncpp)

ADD_SUBDIRECTORY(mocca)

OPTION(MOCCA_BUILD_TESTS "Build tests for mocca" ON)
IF (MOCCA_BUILD_TESTS)
	IF (MSVC)
		SET(gtest_force_shared_crt ON CACHE BOOL "Always use msvcrt.dll" FORCE)
	ENDIF ()
	ADD_SUBDIRECTORY(ext/googletest)
    ADD_SUBDIRECTORY(tests)
ENDIF()