CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
PROJECT(mocca)

INCLUDE(PlatformSpecific)
INCLUDE(Macros)

OPTION(MOCCA_RUNTIME_CHECKS "Enable runtime checks (slows down execution)" ON)
IF (MOCCA_RUNTIME_CHECKS)
	ADD_DEFINITIONS(-DMOCCA_RUNTIME_CHECKS)
ENDIF()

FILE(GLOB_RECURSE MOCCA_HEADER ${PROJECT_SOURCE_DIR}/include/mocca/*.h)
FILE(GLOB_RECURSE MOCCA_SOURCE ${PROJECT_SOURCE_DIR}/src/*.cpp)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/thirdparty)

CreateSourceGroups("${MOCCA_SOURCE}" ${PROJECT_SOURCE_DIR}/src)
CreateSourceGroups("${MOCCA_HEADER}" ${PROJECT_SOURCE_DIR}/include/mocca)

ADD_LIBRARY(mocca OBJECT ${MOCCA_SOURCE} ${MOCCA_HEADER})
