CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)
PROJECT(LZ4 C)
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "LZ4 compression library")
SET(CPACK_PACKAGE_VERSION_MAJOR 1)
SET(CPACK_PACKAGE_VERSION_MINOR 5)
SET(CPACK_PACKAGE_VERSION_PATCH r128)
SET(VERSION_STRING	" \"${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}\" ")

SET(LZ4_SOURCE src/lz4.c src/lz4hc.c src/lz4hc.h src/lz4frame.c src/xxhash.c)

ADD_LIBRARY(liblz4 ${LZ4_SOURCE})
    
SET_TARGET_PROPERTIES(liblz4 PROPERTIES
	OUTPUT_NAME lz4
	SOVERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")
TARGET_COMPILE_DEFINITIONS(liblz4 PRIVATE "-DLZ4_VERSION=\"${CPACK_PACKAGE_VERSION_PATCH}\"")
TARGET_INCLUDE_DIRECTORIES(
	liblz4 INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include
	liblz4 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/lz4
	liblz4 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)